GitHub issue #109 solved: user defined constants and operators
- Defaults.ConfigFile.TEMPLATES_DIR_PATH has changed
- user_defined_constants.py and user_defined_operators.py modules have moved into the cvxlab/templates directory.
- templates.rst and symbolic_operators.rst files modified to reflect changees in documentation.
- function copy_utility_files() already working well.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,9 @@ where = ["."]
 include = ["cvxlab*"]
 exclude = ["tests*", "docs*"]
 
+[tool.setuptools.package-data]
+cvxlab = ["templates/*.py"]
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = "test_*.py"
